fina first commit

--- a/src/SM/Bundle/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/SM/Bundle/AdminBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,7 @@
-Hello World!
+{% extends 'SMAdminBundle::layout.html.twig' %}
+{%block header -%}
+    {{header}}
+{%- endblock header%}
+{%block body -%}
+    <strong>{{'admin.dashboard.wellcome'|trans({}, 'SMAdminBundle')}}</strong>
+{%- endblock body%}
