--- a/src/SM/Bundle/AdminBundle/Resources/views/Admin/new.html.twig
+++ b/src/SM/Bundle/AdminBundle/Resources/views/Admin/new.html.twig
@@ -1,37 +1,54 @@
 {% extends 'SMAdminBundle::layout.html.twig' %}
-{%block header%}{{'admin.user.titleCreate'|trans({}, 'SMAdminBundle')}}{%endblock header%}
+{%block header%}Tạo tài khoản{%endblock header%}
 {% block body -%}
     <div class="row">
         {{ form_start(form) }}
         <div class="col-md-8 col-md-offset-1">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><i class="fa fa-user"></i> {{'admin.user.panelCreate'|trans({}, 'SMAdminBundle')}}</h3>
+                    <h3 class="panel-title"><i class="fa fa-user"></i> Tạo tài khoản</h3>
                 </div>
                 <div class="panel-body">
                     <div class="dataTable_wrapper">
                         <table class="table table-striped table-bordered table-hover">
                             <tbody>
                                 <tr>
-                                    <td>{{form_label(form.username)}}</td>
-                                    <td>{{form_widget(form.username)}}</td>
+                                    <td>{{form_label(form.firstname)}}</td>
+                                    <td>{{form_widget(form.firstname)}}</td>
                                 </tr>
                                 <tr>
-                                    <td>{{form_label(form.password)}}</td>
-                                    <td>{{form_widget(form.password)}}</td>
+                                    <td>{{form_label(form.lastname)}}</td>
+                                    <td>{{form_widget(form.lastname)}}</td>
+                                </tr>
+                                <tr>
+                                    <td>{{form_label(form.phone)}}</td>
+                                    <td>{{form_widget(form.phone)}}</td>
+                                </tr>
+                                <tr>
+                                    <td>{{form_label(form.address)}}</td>
+                                    <td>{{form_widget(form.address)}}</td>
                                 </tr>
                                 <tr>
                                     <td>{{form_label(form.email)}}</td>
                                     <td>{{form_widget(form.email)}}</td>
                                 </tr>
                                 <tr>
-                                    <td>{{form_label(form.isActive)}}</td>
-                                    <td>{{form_widget(form.isActive)}}</td>
+                                    <td>{{form_label(form.username)}}</td>
+                                    <td>{{form_widget(form.username)}}</td>
                                 </tr>
                                 <tr>
-                                    <td>{{form_label(form.roles)}}</td>
-                                    <td>{{form_widget(form.roles, {'attr':{'class':'form-control'} })}}</td>
+                                    <td>{{form_label(form.password.first)}}</td>
+                                    <td>{{form_widget(form.password.first)}}</td>
                                 </tr>
+                                <tr>
+                                    <td>{{form_label(form.password.second)}}</td>
+                                    <td>{{form_widget(form.password.second)}}</td>
+                                </tr>
+                                <tr>
+                                    <td>{{form_label(form.description)}}</td>
+                                    <td>{{form_widget(form.description)}}</td>
+                                </tr>
+                                
                             </tbody>
                         </table>
                     </div>
@@ -39,7 +56,7 @@
                 <div class="panel-footer">
                     {{form_widget(form.submit, {'attr':{'class':'btn btn-primary'}})}}
                     <a href="{{ path('admin_user') }}" class="btn btn-warning">
-                        {{'admin.button.backtolist'|trans({}, 'SMAdminBundle')}}
+                        Danh sách tài khoản
                     </a>
                 </div>
             </div>
