--- a/src/SM/Bundle/AdminBundle/Resources/views/Admin/show.html.twig
+++ b/src/SM/Bundle/AdminBundle/Resources/views/Admin/show.html.twig
@@ -1,36 +1,60 @@
 {% extends 'SMAdminBundle::layout.html.twig' %}
-{%block header%}{{'admin.user.panelDetail'|trans({}, 'SMAdminBundle')}}{%endblock header%}
+{%block header%}Thông tin tài khoản{%endblock header%}
 {% block body -%}
     <div class="row">
 
         <div class="col-md-8 col-md-offset-1">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><i class="fa fa-user"></i> {{ entity.username }}</h3>
+                    <h3 class="panel-title"><i class="fa fa-user"></i> {{ entity.firstname }} {{ entity.lastname }}</h3>
                 </div>
                 <div class="panel-body">
                     <div class="dataTable_wrapper">
                         <table class="table table-striped table-bordered table-hover">
                             <tbody>
                                 <tr>
-                                    <td><strong>{{'admin.id'|trans({}, 'SMAdminBundle')}}</strong></td>
+                                    <td><strong>Id</strong></td>
                                     <td>{{ entity.id }}</td>
                                 </tr>
                                 <tr>
-                                    <td><strong>{{'admin.user.username'|trans({}, 'SMAdminBundle')}}</strong></td>
+                                    <td><strong>Username</strong></td>
                                     <td>{{ entity.username }}</td>
                                 </tr>
                                 <tr>
-                                    <td><strong>{{'admin.user.password'|trans({}, 'SMAdminBundle')}}</strong></td>
+                                    <td><strong>Firstname</strong></td>
+                                    <td>{{ entity.firstname }}</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>Lastname</strong></td>
+                                    <td>{{ entity.lastname }}</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>Điện thoại</strong></td>
+                                    <td>{{ entity.phone }}</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>Địa chỉ</strong></td>
+                                    <td>{{ entity.address }}</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>Thông tin chi tiếc</strong></td>
+                                    <td>{{ entity.description }}</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>Ngày tạo</strong></td>
+                                    <td>{{ entity.dateCreation|date("d/m/Y H:i:s") }}</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>Ngày chỉnh sửa</strong></td>
+                                    <td>{{ entity.dateModification|date("d/m/Y") }}</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>Password</strong></td>
                                     <td>******</td>
                                 </tr>
                                 <tr>
-                                    <td><strong>{{'admin.user.email'|trans({}, 'SMAdminBundle')}}</strong></td>
+                                    <td><strong>Email</strong></td>
                                     <td>{{ entity.email }}</td>
-                                </tr>
-                                <tr>
-                                    <td><strong>{{'admin.user.isActive'|trans({}, 'SMAdminBundle')}}</strong></td>
-                                    <td>{{ entity.isActive }}</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -40,10 +64,10 @@
                     <div class="row">
                         <div class="col-lg-10">
                             <a href="{{ path('admin_user') }}" class="btn btn-warning">
-                                {{'admin.button.backtolist'|trans({}, 'SMAdminBundle')}}
+                                Danh sách tài khoản
                             </a>
                             <a href="{{ path('admin_user_edit', { 'id': entity.id }) }}" class="btn btn-info">
-                                {{'admin.button.edit'|trans({}, 'SMAdminBundle')}}
+                                Chỉnh sửa
                             </a>
                         </div>
                         <div class="col-lg-1">
